--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   function_tree: ^0.9.1
   google_fonts: ^6.2.1
+  social_media_buttons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
